@@ -1,4 +1,4 @@
-/* $Id: fm.h,v 1.41 2002/01/21 15:56:13 ukai Exp $ */
+/* $Id: fm.h,v 1.42 2002/01/24 16:59:16 ukai Exp $ */
 /* 
  * w3m: WWW wo Miru utility
  * 
@@ -87,10 +87,6 @@ void bzero(void *, int);
 
 #define FALSE 0
 #define TRUE   1
-
-#ifdef USE_COOKIE
-#define PERHAPS 2
-#endif
 
 #define SHELLBUFFERNAME	"*Shellout*"
 #define PIPEBUFFERNAME	"*stream*"
@@ -843,7 +839,10 @@ global int reverse_mouse init(FALSE);
 global int default_use_cookie init(TRUE);
 global int use_cookie init(FALSE);
 global int accept_cookie init(FALSE);
-global int accept_bad_cookie init(FALSE);
+#define ACCEPT_BAD_COOKIE_DISCARD	0
+#define ACCEPT_BAD_COOKIE_ACCEPT	1
+#define ACCEPT_BAD_COOKIE_ASK		2
+global int accept_bad_cookie init(ACCEPT_BAD_COOKIE_DISCARD);
 global char *cookie_reject_domains init(NULL);
 global char *cookie_accept_domains init(NULL);
 global TextList *Cookie_reject_domains;
